[metadata]
name = corncobs
author = Thomas Antony
author-email = tantony@smart-ag.com

summary = A simple stream communication protocol for structured data
description-file = README.md
home-page = https://github.com/Smart-Ag/corncobs

license = MIT
keywords =
    struct
    communication
    protocol
    serial
    arduino

classifiers =
    Development Status :: 3 - Alpha
    Topic :: Software Development :: Libraries
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License

[files]
packages = corncobs

extra_files =
        setup.py
        README.md
        test_corncobs.py

[bdist_wheel]
universal = 1

[aliases]
test=pytest
